# gridcapacity

./: .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  pyproject.toml  sample_config.json
.github/workflows/: python-app.yml
gridcapacity/: __init__.py  __main__.py  capacity_analysis.py  config.py  contingency_analysis.py  convert_case2json.py  envs.py  output.py  utils.py  violations_analysis.py
gridcapacity/backends/: __init__.py  subsystems.py
gridcapacity/backends/pandapower/: __init__.py  wrapped_funcs.py
gridcapacity/backends/psse/: __init__.py  path_helper.py  subsystem_data.py  wrapped_funcs.py
gridcapacity/backends/subsystems/: __init__.py  area.py  branch.py  bus.py  gen.py  load.py  swing_bus.py  trafo.py  trafo3w.py  utils.py  zone.py
pssetools/: __init__.py  __main__.py  analysis.py  capacity_analysis.py  config.py  constants.py  contingency_analysis.py  output.py  path_helper.py  subsystem_data.py  subsystems.py  violations_analysis.py  wrapped_funcs.py
sample_data/: savnw.json
tests/: __init__.py  check_violations.py  test_capacity_analysis.py  test_capacity_analysis_utils.py  test_capacity_analysis_with_connection_scenario.py  test_contingency_analysis.py  test_violations_analysis.py
