[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gridcapacity"
version = "0.0.1"
authors = [{ name = "Example Author", email = "author@example.com" }]
description = "grid capacity calculation tool for electrical network models"
readme = "README.md"
requires-python = ">=3.9"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "numba==0.56.4",
    "pandapower~=2.13.1",
    "pydantic~=1.10.8",
    "tqdm~=4.65.0",
    "typer[all]~=0.9.0",
    "rich~=13.5.1",
]

[tool.setuptools.packages.find]
exclude = ["sample_data*"]

[project.optional-dependencies]
ppfull = [
    "pandapower[all]~=2.13.1",
]
devtools = [
    "autoflake",
    "black[d]",
    "isort",
    "mypy~=0.982",
    "prospector[with_everything]",
]

[project.urls]
"Homepage" = "https://github.com/dvlazariev/pssetools"
"Bug Tracker" = "https://github.com/dvlazariev/pssetools/issues"

# https://github.com/PyCQA/isort/issues/1518#issuecomment-703056188
[tool.isort]
profile = "black"

# https://mypy.readthedocs.io/en/latest/config_file.html#example-pyproject-toml
[tool.mypy]
plugins = ["pydantic.mypy"]

disallow_untyped_defs = true
follow_imports = "silent"
no_silence_site_packages = true

[[tool.mypy.overrides]]
module = ["pandapower", "psse35", "psspy", "redirect", "tqdm"]
ignore_missing_imports = true
